--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,23 @@
-#drag1 {
-  background-image: url("https://picsum.photos/id/237/200/300");
+.image {
   height: 300px;
   width: 200px;
   margin: 20px;
+  border: 3px solid transparent;
 }
 
-#drag2 {
-  background-image: url("https://picsum.photos/seed/picsum/200/300");
-  height: 300px;
-  width: 200px;
-  margin: 20px;
-}
-
-#drag3 {
-  background-image: url("https://picsum.photos/200/300?grayscale");
-  height: 300px;
-  width: 200px;
-  margin: 20px;
-}
-
-#drag4 {
-  background-image: url("https://picsum.photos/200/300/");
-  height: 300px;
-  width: 200px;
-  margin: 20px;
-}
-
-#drag5 {
-  background-image: url("https://picsum.photos/200/300.jpg");
-  height: 300px;
-  width: 200px;
-  margin: 20px;
-}
-
-#drag6 {
-  background-image: url("https://picsum.photos/id/102/200/300");
-  height: 300px;
-  width: 200px;
-  margin: 20px;
-}
-
-div.container {
-  border: 5px solid #555;
+.image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .flex {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
 }
 
-.selected {
-  border: 5px solid rgb(0, 195, 255);
-}
-
-p {
-  text-align: center;
-}
-
-button {
-  margin: 20px;
+.image.dragging {
+  opacity: 0.5;
+  border: 3px dashed #00c3ff;
 }
